--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@prisma/client": "^5.4.2",
+    "jose": "^4.15.4",
     "next": "13.5.5",
+    "nodemailer": "^6.9.6",
     "prisma": "^5.4.2",
     "react": "^18",
     "react-dom": "^18"
